--- a/main.css
+++ b/main.css
@@ -4,35 +4,48 @@
 
 @layer base {
     html {
-      @apply bg-gray-200 text-gray-800 cursor-default
+      @apply bg-[#F8F8FB] text-gray-700 cursor-default
     }
     body {
-      @apply relative min-h-screen min-w-full dark:bg-gray-600 dark:text-white
+      @apply relative min-h-screen min-w-full
     }
     .scrollbar::-webkit-scrollbar,
     html::-webkit-scrollbar {
       @apply w-2 bg-gray-400
     }
-    .scrollbar::-webkit-scrollbar {
-      @apply rounded-full
+    .scrollbar::-webkit-scrollbar.small-scrollbar {
+      @apply w-1
     }
     .scrollbar::-webkit-scrollbar-thumb,
     html::-webkit-scrollbar-thumb {
       @apply rounded-full bg-gray-800
     }
-    .card {
-      @apply shadow-lg p-5 md:p-8 rounded-md border border-slate-300 dark:border-slate-500
+
+    .app-container {
+      @apply w-screen h-screen overflow-hidden
     }
-    input {
-      @apply py-1 px-3 bg-transparent rounded-md border-2 border-gray-400 outline-none focus:border-gray-600
+
+    .app-container .nav-container {
+      @apply w-[250px] h-full overflow-y-auto absolute bg-white shadow translate-x-[-250px] md:translate-x-0 z-50
     }
-    button {
-      @apply  px-4 py-2 uppercase tracking-wide rounded-md active:scale-95
+
+    .app-container .nav-container.slide {
+      @apply translate-x-0 md:translate-x-[-250px]
     }
-    #nav {
-      @apply max-h-0 py-0 md:max-h-screen duration-150
+
+    .app-container .main {
+      @apply h-full overflow-y-auto md:ml-[250px]
     }
-    #nav.open {
-      @apply max-h-screen py-2 duration-150
+
+    .app-container .main.expand {
+      @apply h-full overflow-y-auto md:ml-0
+    }
+
+    .nav-overlay {
+      @apply opacity-0 invisible
+    }
+
+    .nav-overlay.show {
+      @apply opacity-100 visible
     }
 }
